:heavy_minus_sign: Removing invalid spring-boot-starter-security