@@ -37,14 +37,6 @@
             <version>1.0.0</version>
         </dependency>
 
-        <!--添加 SpringSecurity 依赖后，所有的地址都被 SpringSecurity 所控制了，我们目前只是需要用到BCrypt密码加密的部分，
-                        所以我们要添加一个配置类，配置为所有地址都可以匿名访问-->
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-starter-security</artifactId>-->
-<!--        </dependency>-->
-
-
     </dependencies>
 
     <build>
@@ -72,6 +64,159 @@
             </resource>
         </resources>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.14.1</version>
+                <configuration>
+                    <systemPropertyVariables>
+                        <io.springfox.staticdocs.outputDir>${project.build.directory}/swagger/api/1.3.0
+                        </io.springfox.staticdocs.outputDir>
+                        <io.swagger.json.uris>/v2/api-docs?</io.swagger.json.uris>
+                        <io.swagger.json.output.name>swagger-pai-v1.json</io.swagger.json.output.name>
+                    </systemPropertyVariables>
+                    <argLine>-Xmx256M -XX:MaxPermSize=128M</argLine>
+                    <parallel>false</parallel>
+                    <testFailureIgnore>true</testFailureIgnore>
+                    <includes>
+                        <include>**/*.java</include>
+                    </includes>
+                </configuration>
+            </plugin>
+
+
+            <plugin>
+                <groupId>org.asciidoctor</groupId>
+                <artifactId>asciidoctor-maven-plugin</artifactId>
+                <version>1.5.3</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.asciidoctor</groupId>
+                        <artifactId>asciidoctorj-pdf</artifactId>
+                        <version>1.5.0-alpha.10.1</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.jruby</groupId>
+                        <artifactId>jruby-complete</artifactId>
+                        <version>1.7.21</version>
+                    </dependency>
+                </dependencies>
+                <configuration>
+                    <sourceDirectory>${asciidoctor.input.directory}</sourceDirectory>
+                    <sourceDocumentName>index.adoc</sourceDocumentName>
+                    <attributes>
+                        <doctype>book</doctype>
+                        <toc>left</toc>
+                        <toclevels>3</toclevels>
+                        <numbered></numbered>
+                        <hardbreaks></hardbreaks>
+                        <sectlinks></sectlinks>
+                        <sectanchors></sectanchors>
+                        <generated>${generated.asciidoc.directory}/${rest.swagger.path}</generated>
+                    </attributes>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>output-html</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>process-asciidoc</goal>
+                        </goals>
+                        <configuration>
+                            <backend>html5</backend>
+                            <outputDirectory>${asciidoctor.html.output.directory}/${rest.swagger.path}</outputDirectory>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>output-pdf</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>process-asciidoc</goal>
+                        </goals>
+                        <configuration>
+                            <backend>pdf</backend>
+                            <outputDirectory>${asciidoctor.pdf.output.directory}/${rest.swagger.path}</outputDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <!--批量修改文件名 for 接口文档打包-->
+            <plugin>
+                <groupId>com.coderplus.maven.plugins</groupId>
+                <artifactId>copy-rename-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>rename-file-pdf-api</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>rename</goal>
+                        </goals>
+                        <configuration>
+                            <sourceFile>${asciidoctor.pdf.output.directory}/${rest.api.path}/index.pdf</sourceFile>
+                            <destinationFile>${swagger.output.zip}/pdf/xxx-api-${rest.api.version}.pdf</destinationFile>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>rename-file-pdf-ui</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>rename</goal>
+                        </goals>
+                        <configuration>
+                            <sourceFile>${asciidoctor.pdf.output.directory}/${rest.ui.path}/index.pdf</sourceFile>
+                            <destinationFile>${swagger.output.zip}/pdf/xxx-ui-${rest.ui.version}.pdf</destinationFile>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>rename-file-html-api</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>rename</goal>
+                        </goals>
+                        <configuration>
+                            <sourceFile>${asciidoctor.html.output.directory}/${rest.api.path}/index.html</sourceFile>
+                            <destinationFile>${swagger.output.zip}/html/xxx-api-${rest.api.version}.html
+                            </destinationFile>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>rename-file-html-ui</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>rename</goal>
+                        </goals>
+                        <configuration>
+                            <sourceFile>${asciidoctor.html.output.directory}/${rest.ui.path}/index.html</sourceFile>
+                            <destinationFile>${swagger.output.zip}/html/xxx-ui-${rest.ui.version}.html</destinationFile>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>rename-file-json-api</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>rename</goal>
+                        </goals>
+                        <configuration>
+                            <sourceFile>${project.build.directory}/swagger/xxx-api-${rest.api.version}.json</sourceFile>
+                            <destinationFile>${swagger.output.zip}/json/xxx-api-${rest.api.version}.json
+                            </destinationFile>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>rename-file-json-ui</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>rename</goal>
+                        </goals>
+                        <configuration>
+                            <sourceFile>${project.build.directory}/swagger/xxx-ui-${rest.ui.version}.json</sourceFile>
+                            <destinationFile>${swagger.output.zip}/json/xxx-ui-${rest.ui.version}.json</destinationFile>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -88,6 +233,8 @@
                         </path>
                         <!-- other annotation processors -->
                     </annotationProcessorPaths>
+
+
                 </configuration>
             </plugin>
 
